# substrate-enterprise-sample

chain/pallets/coop-asset-profile/: Cargo.toml
chain/pallets/coop-asset-profile/src/: lib.rs  mock.rs  tests.rs  types.rs
chain/pallets/coop-member-profile/: Cargo.toml
chain/pallets/coop-member-profile/src/: lib.rs  mock.rs  tests.rs  types.rs
